# rust-decentralized-file-sync

./: .gitignore  Cargo.toml
file-sync-core/: Cargo.toml
file-sync-core/src/: lib.rs
rendezvous-client/: Cargo.toml
rendezvous-client/config/: log4rs.yaml
rendezvous-client/src/: client.rs  lib.rs  main.rs  peer_client.rs  peer_server.rs  server.rs
rendezvous-server/: Cargo.toml
rendezvous-server/config/: log4rs.yaml
rendezvous-server/src/: lib.rs  main.rs
