[package]
name = "rendezvous-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-sync-core = {path ="../file-sync-core"}
futures = "0.3.0"
async-std = "1"
log = "0.4"
log4rs = "1.2.0"
serde = "1.0.151"
serde_json = "1.0"